--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -416,10 +416,11 @@ h6,
 #header2-0 .mbr-section-title {
   font-size: 46px;
   font-family: 'Roboto', sans-serif;
-  text-align: center;
+  text-align: right;
 }
 #header2-0 .mbr-section-title SPAN {
   color: #ffffff;
+  font-size: 32px;
 }
 #features3-1 H4 {
   text-align: center;
