--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,7 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Slabo+27px);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+
+
+
 
 
 
@@ -423,6 +428,16 @@ h6,
   font-size: 32px;
 }
 #features3-1 H4 {
-  text-align: center;
+  text-align: left;
   font-size: 15px;
+  font-family: 'Slabo 27px', serif;
+  color: #7c706b;
+}
+#features3-1 DIV {
+  text-align: left;
+  font-family: 'Open Sans', sans-serif;
+}
+#features3-1 H5 {
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
 }
