--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4,6 +4,7 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Bitter:400,700);
 
 
 
@@ -85,7 +86,7 @@ h6,
   background-color: #c0a375 !important;
 }
 .bg-success {
-  background-color: #90a878 !important;
+  background-color: #c0a375 !important;
 }
 .bg-info {
   background-color: #7e9b9f !important;
@@ -157,8 +158,8 @@ h6,
   border-color: #597478 !important;
 }
 .btn-success {
-  background-color: #90a878;
-  border-color: #90a878;
+  background-color: #c0a375;
+  border-color: #c0a375;
   color: #ffffff;
 }
 .btn-success:hover,
@@ -167,14 +168,14 @@ h6,
 .btn-success:active,
 .btn-success.active {
   color: #ffffff;
-  background-color: #6a8153;
-  border-color: #6a8153;
+  background-color: #a07e49;
+  border-color: #a07e49;
 }
 .btn-success.disabled,
 .btn-success:disabled {
   color: #ffffff !important;
-  background-color: #6a8153 !important;
-  border-color: #6a8153 !important;
+  background-color: #a07e49 !important;
+  border-color: #a07e49 !important;
 }
 .btn-warning {
   background-color: #f3c649;
@@ -278,8 +279,8 @@ h6,
 }
 .btn-success-outline {
   background: none;
-  border-color: #5d7149;
-  color: #5d7149;
+  border-color: #8e7041;
+  color: #8e7041;
 }
 .btn-success-outline:hover,
 .btn-success-outline:focus,
@@ -287,14 +288,14 @@ h6,
 .btn-success-outline:active,
 .btn-success-outline.active {
   color: #ffffff;
-  background-color: #90a878;
-  border-color: #90a878;
+  background-color: #c0a375;
+  border-color: #c0a375;
 }
 .btn-success-outline.disabled,
 .btn-success-outline:disabled {
   color: #ffffff !important;
-  background-color: #90a878 !important;
-  border-color: #90a878 !important;
+  background-color: #c0a375 !important;
+  border-color: #c0a375 !important;
 }
 .btn-warning-outline {
   background: none;
@@ -340,7 +341,7 @@ h6,
   color: #c0a375 !important;
 }
 .text-success {
-  color: #90a878 !important;
+  color: #c0a375 !important;
 }
 .text-info {
   color: #7e9b9f !important;
@@ -352,7 +353,7 @@ h6,
   color: #f1aaa7 !important;
 }
 .alert-success {
-  background-color: #90a878;
+  background-color: #c0a375;
 }
 .alert-info {
   background-color: #7e9b9f;
@@ -397,7 +398,7 @@ h6,
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
-  color: #d0dac6;
+  color: #e8ddcd;
 }
 .mbr-plan-header.bg-info .mbr-plan-subtitle,
 .mbr-plan-header.bg-info .mbr-plan-price-desc {
@@ -440,4 +441,102 @@ h6,
 #features3-1 H5 {
   font-family: 'Open Sans', sans-serif;
   text-align: left;
+}
+
+
+
+
+
+
+#header3-m .mbr-section-title,
+#header3-m .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-m .mbr-section-title {
+  text-align: center;
+  font-family: 'Bitter', serif;
+  font-size: 23px;
+}
+#header3-m .mbr-section-title DIV {
+  font-size: 16px;
+  color: #f1aaa7;
+}
+#header3-m .mbr-section-subtitle SPAN {
+  font-size: 12px;
+  font-family: 'Bitter', serif;
+}
+#header3-m .mbr-section-title SPAN {
+  font-size: 9px;
+}
+#header3-m .mbr-section-subtitle {
+  text-align: center;
+}
+#features4-h .card-subtitle {
+  color: #f1aaa7;
+  font-size: 12px;
+  text-align: center;
+  font-family: 'Bitter', serif;
+}
+#features4-h .iconbox {
+  background-color: #f2f2f2;
+  border-color: #f2f2f2;
+}
+#features4-h P {
+  font-size: 13px;
+  text-align: center;
+  color: #000000;
+  font-family: 'Bitter', serif;
+}
+#features4-h H4 {
+  color: #1a562b;
+  font-family: 'Bitter', serif;
+  font-size: 20px;
+}
+#testimonials3-8 .mbr-section-title {
+  color: #d4bb57;
+  text-align: center;
+  font-family: 'Bitter', serif;
+  font-size: 30px;
+}
+#testimonials3-8 .mbr-author-name {
+  color: #ccc;
+}
+#testimonials3-8 .mbr-section-title SPAN {
+  font-size: 21px;
+}
+#contacts5-i p,
+#contacts5-i .list-group-text,
+#contacts5-i .form-control-label {
+  color: #000;
+}
+#contacts5-i strong,
+#contacts5-i h4 {
+  color: #7e9b9f;
+}
+#contacts5-i form .form-control {
+  border-color: rgba(0, 0, 0, 0.2);
+  color: #565656;
+}
+#contacts5-i .mbr-footer-content li {
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.1);
+}
+#contacts5-i .mbr-company .list-group-text::after {
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.2);
+}
+#pricing-table2-j .mbr-plan-header,
+#pricing-table2-j .mbr-plan-body {
+  background-color: #f4f4f4;
+}
+#pricing-table2-j ul,
+#pricing-table2-j .mbr-plan-title,
+#pricing-table2-j .mbr-price-value,
+#pricing-table2-j .mbr-price-figure,
+#pricing-table2-j .mbr-price-term {
+  color: #28262b;
+}
+#pricing-table2-j .mbr-plan {
+  border-color: #e8e8e8;
+}
+#pricing-table2-j .mbr-plan .list-group-item {
+  border-color: #cfcfcf;
 }
