--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -441,20 +441,22 @@ h6,
   font-family: 'Open Sans', sans-serif;
   text-align: left;
 }
-#pricing-table2-16 .mbr-plan-header,
-#pricing-table2-16 .mbr-plan-body {
-  background-color: #f4f4f4;
+
+
+#features1-18 .striped .mbr-cards-col:nth-child(2n+1) {
+  background-color: #2e2e2e;
 }
-#pricing-table2-16 ul,
-#pricing-table2-16 .mbr-plan-title,
-#pricing-table2-16 .mbr-price-value,
-#pricing-table2-16 .mbr-price-figure,
-#pricing-table2-16 .mbr-price-term {
-  color: #28262b;
+#features1-18 .mbr-cards-col:nth-child(odd) .card-title {
+  text-align: center;
+  font-family: 'Slabo 27px', serif;
 }
-#pricing-table2-16 .mbr-plan {
-  border-color: #e8e8e8;
+#features1-18 .mbr-cards-col:nth-child(even) .card-title {
+  text-align: center;
+  font-family: 'Lora', serif;
 }
-#pricing-table2-16 .mbr-plan .list-group-item {
-  border-color: #cfcfcf;
+#features1-18 .mbr-cards-col:nth-child(even) .card-text {
+  font-size: 14px;
+}
+#features1-18 .mbr-cards-col:nth-child(odd) .card-text {
+  font-size: 14px;
 }
