--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -478,3 +478,39 @@ h6,
 #footer1-1b P {
   color: #c0a375;
 }
+
+
+
+
+#header3-1d .mbr-section-title,
+#header3-1d .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-1d .mbr-section-title {
+  color: #c0a375;
+  font-size: 30px;
+  font-family: 'Bitter', serif;
+}
+#features1-1e .striped .mbr-cards-col:nth-child(2n+1) {
+  background-color: #2e2e2e;
+}
+#features1-1e .mbr-cards-col:nth-child(odd) .card-title {
+  text-align: center;
+  font-family: 'Bitter', serif;
+}
+#features1-1e .mbr-cards-col:nth-child(even) .card-title {
+  text-align: center;
+  font-family: 'Bitter', serif;
+}
+#features1-1e .mbr-cards-col:nth-child(even) .card-text {
+  font-size: 14px;
+}
+#features1-1e .mbr-cards-col:nth-child(odd) .card-text {
+  font-size: 14px;
+}
+#features1-1e .mbr-cards-col:nth-child(odd) .card-title SPAN {
+  font-family: 'Bitter', serif;
+}
+#footer1-1f P {
+  color: #c0a375;
+}
