--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -478,6 +478,12 @@ h6,
 #footer1-1b P {
   color: #c0a375;
 }
+
+
+
+
+
+
 #pricing-table2-1t .mbr-plan-header,
 #pricing-table2-1t .mbr-plan-body {
   background-color: #f4f4f4;
@@ -494,4 +500,36 @@ h6,
 }
 #pricing-table2-1t .mbr-plan .list-group-item {
   border-color: #cfcfcf;
+}
+#pricing-table2-1t .mbr-section__container .mbr-section-title {
+  font-size: 32px;
+  font-family: 'Bitter', serif;
+}
+#pricing-table2-1t .mbr-section__container .mbr-section-subtitle SPAN {
+  font-family: 'Bitter', serif;
+}
+#pricing-table2-1t .mbr-plan-price-desc {
+  text-align: center;
+}
+#pricing-table2-1t .mbr-plan-price-desc SPAN {
+  font-size: 12px;
+}
+#pricing-table2-1t .mbr-price-figure {
+  font-size: 32px;
+  font-family: 'Bitter', serif;
+}
+#pricing-table2-1t .mbr-price-term {
+  font-size: 20px;
+  font-family: 'Bitter', serif;
+}
+#pricing-table2-1t .mbr-price-value {
+  font-size: 16px;
+  font-family: 'Bitter', serif;
+}
+#pricing-table2-1t .mbr-plan-title {
+  font-size: 19px;
+  font-family: 'Bitter', serif;
+}
+#pricing-table2-1t .mbr-price-term B {
+  font-size: 32px;
 }
