--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -480,6 +480,12 @@ h6,
 }
 
 
+
+
+
+
+
+
 #pricing-table2-1v .mbr-plan-header,
 #pricing-table2-1v .mbr-plan-body {
   background-color: #f4f4f4;
@@ -500,9 +506,49 @@ h6,
 #pricing-table2-1v .mbr-section__container .mbr-section-title {
   font-size: 32px;
   font-family: 'Bitter', serif;
+  color: #f1aaa7;
 }
 #pricing-table2-1v .mbr-section__container .mbr-section-subtitle SPAN {
   font-family: 'Bitter', serif;
+}
+#pricing-table2-1v UL {
+  font-size: 15px;
+}
+#pricing-table2-1v DIV {
+  color: #847272;
+  font-size: 14px;
+  font-family: 'Bitter', serif;
+}
+#pricing-table2-1v .mbr-plan-title DIV {
+  color: #000000;
+  font-family: 'Bitter', serif;
+}
+#pricing-table2-1v .mbr-price-value {
+  font-size: 16px;
+  font-family: 'Bitter', serif;
+}
+#pricing-table2-1v .mbr-price-figure {
+  font-size: 32px;
+  font-family: 'Bitter', serif;
+}
+#pricing-table2-1v .mbr-price-term {
+  font-size: 20px;
+  font-family: 'Bitter', serif;
+}
+#pricing-table2-1v .mbr-plan-title {
+  font-family: 'Bitter', serif;
+}
+#pricing-table2-1v P {
+  text-align: center;
+  color: #847272;
+  font-size: 14px;
+}
+#pricing-table2-1v B {
+  color: #847272;
+  font-size: 14px;
+}
+#pricing-table2-1v .mbr-plan-label {
+  color: #efefef;
 }
 
 
