--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -499,6 +499,73 @@ h6,
   font-size: 12px;
 }
 
+#msg-box8-35 .mbr-section-title,
+#msg-box8-35 p {
+  color: #fff;
+}
+#ext_menu-2l .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-2l .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-2l .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-2l .close-icon::before,
+#ext_menu-2l .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-2l .link,
+#ext_menu-2l .dropdown-item {
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+#ext_menu-2l .link {
+  font-size: 1.05rem;
+}
+#ext_menu-2l .dropdown-item,
+#ext_menu-2l .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-2l .link:hover,
+#ext_menu-2l .dropdown-item:hover,
+#ext_menu-2l .link:focus,
+#ext_menu-2l .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-2l .link[aria-expanded="true"],
+#ext_menu-2l .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-2l .nav-dropdown-sm .link:focus,
+#ext_menu-2l .nav-dropdown-sm .link:hover,
+#ext_menu-2l .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-2l .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-2l .navbar,
+#ext_menu-2l .nav-dropdown-sm,
+#ext_menu-2l .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-2l .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-2l .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-2l .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-2l .bg-color.transparent.opened .link:hover,
+#ext_menu-2l .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-2l .link[aria-expanded="true"],
+#ext_menu-2l .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+
 
 
 
@@ -755,4 +822,80 @@ h6,
 }
 #pricing-table2-1w UL {
   font-size: 14px;
+}
+
+
+#ext_menu-2l .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-2l .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-2l .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-2l .close-icon::before,
+#ext_menu-2l .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-2l .link,
+#ext_menu-2l .dropdown-item {
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+#ext_menu-2l .link {
+  font-size: 1.05rem;
+}
+#ext_menu-2l .dropdown-item,
+#ext_menu-2l .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-2l .link:hover,
+#ext_menu-2l .dropdown-item:hover,
+#ext_menu-2l .link:focus,
+#ext_menu-2l .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-2l .link[aria-expanded="true"],
+#ext_menu-2l .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-2l .nav-dropdown-sm .link:focus,
+#ext_menu-2l .nav-dropdown-sm .link:hover,
+#ext_menu-2l .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-2l .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-2l .navbar,
+#ext_menu-2l .nav-dropdown-sm,
+#ext_menu-2l .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-2l .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-2l .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-2l .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-2l .bg-color.transparent.opened .link:hover,
+#ext_menu-2l .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-2l .link[aria-expanded="true"],
+#ext_menu-2l .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#header3-2n .mbr-section-title,
+#header3-2n .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-2n .mbr-section-subtitle {
+  text-align: center;
+  font-size: 13px;
+}
+#header3-2n .mbr-section-title P {
+  font-size: 24px;
+  font-family: 'Bitter', serif;
 }
