--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5,6 +5,7 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
 
 
 
@@ -499,70 +500,70 @@ h6,
   font-size: 12px;
 }
 
-#msg-box8-35 .mbr-section-title,
-#msg-box8-35 p {
-  color: #fff;
+#header3-3j .mbr-section-title,
+#header3-3j .mbr-section-subtitle {
+  text-align: center;
 }
-#ext_menu-2l .hide-buttons .nav-btn {
+#ext_menu-3a .hide-buttons .nav-btn {
   display: none !important;
 }
-#ext_menu-2l .navbar-caption {
+#ext_menu-3a .navbar-caption {
   color: #ffffff;
 }
-#ext_menu-2l .navbar-toggler {
+#ext_menu-3a .navbar-toggler {
   color: #ffffff;
 }
-#ext_menu-2l .close-icon::before,
-#ext_menu-2l .close-icon::after {
+#ext_menu-3a .close-icon::before,
+#ext_menu-3a .close-icon::after {
   background-color: #ffffff;
 }
-#ext_menu-2l .link,
-#ext_menu-2l .dropdown-item {
+#ext_menu-3a .link,
+#ext_menu-3a .dropdown-item {
   color: #ffffff;
   font-family: 'Roboto', sans-serif;
 }
-#ext_menu-2l .link {
+#ext_menu-3a .link {
   font-size: 1.05rem;
 }
-#ext_menu-2l .dropdown-item,
-#ext_menu-2l .nav-dropdown-sm .link {
+#ext_menu-3a .dropdown-item,
+#ext_menu-3a .nav-dropdown-sm .link {
   font-size: 1.137rem;
 }
-#ext_menu-2l .link:hover,
-#ext_menu-2l .dropdown-item:hover,
-#ext_menu-2l .link:focus,
-#ext_menu-2l .dropdown-item:focus {
+#ext_menu-3a .link:hover,
+#ext_menu-3a .dropdown-item:hover,
+#ext_menu-3a .link:focus,
+#ext_menu-3a .dropdown-item:focus {
   color: #c0a375;
 }
-#ext_menu-2l .link[aria-expanded="true"],
-#ext_menu-2l .dropdown-menu {
+#ext_menu-3a .link[aria-expanded="true"],
+#ext_menu-3a .dropdown-menu {
   background: #0e0e0e;
 }
-#ext_menu-2l .nav-dropdown-sm .link:focus,
-#ext_menu-2l .nav-dropdown-sm .link:hover,
-#ext_menu-2l .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-2l .nav-dropdown-sm .dropdown-item:hover {
+#ext_menu-3a .nav-dropdown-sm .link:focus,
+#ext_menu-3a .nav-dropdown-sm .link:hover,
+#ext_menu-3a .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-3a .nav-dropdown-sm .dropdown-item:hover {
   background: #202020!important;
 }
-#ext_menu-2l .navbar,
-#ext_menu-2l .nav-dropdown-sm,
-#ext_menu-2l .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-2l .nav-dropdown-sm .dropdown-menu {
+#ext_menu-3a .navbar,
+#ext_menu-3a .nav-dropdown-sm,
+#ext_menu-3a .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-3a .nav-dropdown-sm .dropdown-menu {
   background: #282828;
 }
-#ext_menu-2l .bg-color.transparent .link {
+#ext_menu-3a .bg-color.transparent .link {
   color: #ffffff;
   transition: none;
 }
-#ext_menu-2l .bg-color.transparent.opened .link {
+#ext_menu-3a .bg-color.transparent.opened .link {
   transition: color 0.2s ease-in-out;
 }
-#ext_menu-2l .bg-color.transparent.opened .link:hover,
-#ext_menu-2l .bg-color.transparent.opened .link:focus {
+#ext_menu-3a .bg-color.transparent.opened .link:hover,
+#ext_menu-3a .bg-color.transparent.opened .link:focus {
   color: #c0a375;
 }
-#ext_menu-2l .link[aria-expanded="true"],
-#ext_menu-2l .dropdown-item[aria-expanded="true"] {
+#ext_menu-3a .link[aria-expanded="true"],
+#ext_menu-3a .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
 }
 
@@ -900,73 +901,6 @@ h6,
   font-family: 'Bitter', serif;
 }
 
-#msg-box8-37 .mbr-section-title,
-#msg-box8-37 p {
-  color: #fff;
-}
-#ext_menu-39 .hide-buttons .nav-btn {
-  display: none !important;
-}
-#ext_menu-39 .navbar-caption {
-  color: #ffffff;
-}
-#ext_menu-39 .navbar-toggler {
-  color: #ffffff;
-}
-#ext_menu-39 .close-icon::before,
-#ext_menu-39 .close-icon::after {
-  background-color: #ffffff;
-}
-#ext_menu-39 .link,
-#ext_menu-39 .dropdown-item {
-  color: #ffffff;
-  font-family: 'Roboto', sans-serif;
-}
-#ext_menu-39 .link {
-  font-size: 1.05rem;
-}
-#ext_menu-39 .dropdown-item,
-#ext_menu-39 .nav-dropdown-sm .link {
-  font-size: 1.137rem;
-}
-#ext_menu-39 .link:hover,
-#ext_menu-39 .dropdown-item:hover,
-#ext_menu-39 .link:focus,
-#ext_menu-39 .dropdown-item:focus {
-  color: #c0a375;
-}
-#ext_menu-39 .link[aria-expanded="true"],
-#ext_menu-39 .dropdown-menu {
-  background: #0e0e0e;
-}
-#ext_menu-39 .nav-dropdown-sm .link:focus,
-#ext_menu-39 .nav-dropdown-sm .link:hover,
-#ext_menu-39 .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-39 .nav-dropdown-sm .dropdown-item:hover {
-  background: #202020!important;
-}
-#ext_menu-39 .navbar,
-#ext_menu-39 .nav-dropdown-sm,
-#ext_menu-39 .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-39 .nav-dropdown-sm .dropdown-menu {
-  background: #282828;
-}
-#ext_menu-39 .bg-color.transparent .link {
-  color: #ffffff;
-  transition: none;
-}
-#ext_menu-39 .bg-color.transparent.opened .link {
-  transition: color 0.2s ease-in-out;
-}
-#ext_menu-39 .bg-color.transparent.opened .link:hover,
-#ext_menu-39 .bg-color.transparent.opened .link:focus {
-  color: #c0a375;
-}
-#ext_menu-39 .link[aria-expanded="true"],
-#ext_menu-39 .dropdown-item[aria-expanded="true"] {
-  color: #c0a375!important;
-}
-
 
 
 
@@ -1041,8 +975,10 @@ h6,
   font-size: 13px;
 }
 #header3-3b .mbr-section-title P {
-  font-size: 24px;
-  font-family: 'Bitter', serif;
+  font-size: 21px;
+  font-family: 'Merriweather', serif;
+  text-align: center;
+  color: #c0a375;
 }
 #features1-3f .striped .mbr-cards-col:nth-child(2n+1) {
   background-color: #ffffff;
