--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6,6 +6,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Oxygen:400,300,700);
 
 
 
@@ -995,6 +996,312 @@ h6,
   font-family: 'Slabo 27px', serif;
 }
 #features1-3f .mbr-cards-col:nth-child(odd) .card-subtitle {
+  color: #c1c1c1;
+  text-align: center;
+}
+
+
+
+
+#header3-3t .mbr-section-title,
+#header3-3t .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-3u .mbr-section-title,
+#header3-3u .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-3u .mbr-section-title {
+  text-align: center;
+  font-size: 22px;
+}
+#header3-3u .mbr-section-subtitle {
+  color: #c0a375;
+}
+#ext_menu-3q .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-3q .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-3q .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-3q .close-icon::before,
+#ext_menu-3q .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-3q .link,
+#ext_menu-3q .dropdown-item {
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+#ext_menu-3q .link {
+  font-size: 1.05rem;
+}
+#ext_menu-3q .dropdown-item,
+#ext_menu-3q .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-3q .link:hover,
+#ext_menu-3q .dropdown-item:hover,
+#ext_menu-3q .link:focus,
+#ext_menu-3q .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-3q .link[aria-expanded="true"],
+#ext_menu-3q .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-3q .nav-dropdown-sm .link:focus,
+#ext_menu-3q .nav-dropdown-sm .link:hover,
+#ext_menu-3q .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-3q .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-3q .navbar,
+#ext_menu-3q .nav-dropdown-sm,
+#ext_menu-3q .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-3q .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-3q .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-3q .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-3q .bg-color.transparent.opened .link:hover,
+#ext_menu-3q .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-3q .link[aria-expanded="true"],
+#ext_menu-3q .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#content1-3w P {
+  color: #f28281;
+}
+#header3-3x .mbr-section-title,
+#header3-3x .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-3x .mbr-section-title {
+  text-align: left;
+  font-size: 16px;
+  font-family: 'Merriweather', serif;
+  color: #5b5b5b;
+}
+#header3-3x .mbr-section-subtitle {
+  text-align: left;
+  color: #f28281;
+  font-size: 22px;
+}
+#header3-3x .mbr-section-subtitle SPAN {
+  font-family: 'Merriweather', serif;
+  font-size: 20px;
+}
+#content2-3y SPAN {
+  font-family: 'Oxygen', sans-serif;
+  font-size: 15px;
+}
+#content2-3y P {
+  font-size: 16px;
+}
+
+
+
+
+#ext_menu-3n .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-3n .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-3n .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-3n .close-icon::before,
+#ext_menu-3n .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-3n .link,
+#ext_menu-3n .dropdown-item {
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+#ext_menu-3n .link {
+  font-size: 1.05rem;
+}
+#ext_menu-3n .dropdown-item,
+#ext_menu-3n .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-3n .link:hover,
+#ext_menu-3n .dropdown-item:hover,
+#ext_menu-3n .link:focus,
+#ext_menu-3n .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-3n .link[aria-expanded="true"],
+#ext_menu-3n .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-3n .nav-dropdown-sm .link:focus,
+#ext_menu-3n .nav-dropdown-sm .link:hover,
+#ext_menu-3n .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-3n .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-3n .navbar,
+#ext_menu-3n .nav-dropdown-sm,
+#ext_menu-3n .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-3n .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-3n .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-3n .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-3n .bg-color.transparent.opened .link:hover,
+#ext_menu-3n .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-3n .link[aria-expanded="true"],
+#ext_menu-3n .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#header3-3o .mbr-section-title,
+#header3-3o .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-3o .mbr-section-subtitle {
+  text-align: center;
+  font-size: 13px;
+}
+#header3-3o .mbr-section-title P {
+  font-size: 21px;
+  font-family: 'Merriweather', serif;
+  text-align: center;
+  color: #c0a375;
+}
+#features1-3p .striped .mbr-cards-col:nth-child(2n+1) {
+  background-color: #ffffff;
+}
+#features1-3p .mbr-cards-col:nth-child(odd) .card-title {
+  color: #28262b;
+}
+#features1-3p .mbr-cards-col:nth-child(odd) .card-subtitle SPAN {
+  color: #c1c1c1;
+  font-family: 'Slabo 27px', serif;
+}
+#features1-3p .mbr-cards-col:nth-child(even) .card-subtitle SPAN {
+  color: #cccccc;
+  font-family: 'Slabo 27px', serif;
+}
+#features1-3p .mbr-cards-col:nth-child(odd) .card-subtitle {
+  color: #c1c1c1;
+  text-align: center;
+}
+
+
+
+
+#ext_menu-3q .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-3q .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-3q .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-3q .close-icon::before,
+#ext_menu-3q .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-3q .link,
+#ext_menu-3q .dropdown-item {
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+}
+#ext_menu-3q .link {
+  font-size: 1.05rem;
+}
+#ext_menu-3q .dropdown-item,
+#ext_menu-3q .nav-dropdown-sm .link {
+  font-size: 1.137rem;
+}
+#ext_menu-3q .link:hover,
+#ext_menu-3q .dropdown-item:hover,
+#ext_menu-3q .link:focus,
+#ext_menu-3q .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-3q .link[aria-expanded="true"],
+#ext_menu-3q .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-3q .nav-dropdown-sm .link:focus,
+#ext_menu-3q .nav-dropdown-sm .link:hover,
+#ext_menu-3q .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-3q .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-3q .navbar,
+#ext_menu-3q .nav-dropdown-sm,
+#ext_menu-3q .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-3q .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-3q .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-3q .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-3q .bg-color.transparent.opened .link:hover,
+#ext_menu-3q .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-3q .link[aria-expanded="true"],
+#ext_menu-3q .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#header3-3r .mbr-section-title,
+#header3-3r .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-3r .mbr-section-subtitle {
+  text-align: center;
+  font-size: 13px;
+}
+#header3-3r .mbr-section-title P {
+  font-size: 21px;
+  font-family: 'Merriweather', serif;
+  text-align: center;
+  color: #c0a375;
+}
+#features1-3s .striped .mbr-cards-col:nth-child(2n+1) {
+  background-color: #ffffff;
+}
+#features1-3s .mbr-cards-col:nth-child(odd) .card-title {
+  color: #28262b;
+}
+#features1-3s .mbr-cards-col:nth-child(odd) .card-subtitle SPAN {
+  color: #c1c1c1;
+  font-family: 'Slabo 27px', serif;
+}
+#features1-3s .mbr-cards-col:nth-child(even) .card-subtitle SPAN {
+  color: #cccccc;
+  font-family: 'Slabo 27px', serif;
+}
+#features1-3s .mbr-cards-col:nth-child(odd) .card-subtitle {
   color: #c1c1c1;
   text-align: center;
 }
