create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -603,7 +603,7 @@ h6,
 #pricing-table2-1v .mbr-section__container .mbr-section-title {
   font-size: 32px;
   font-family: 'Bitter', serif;
-  color: #d4bb57;
+  color: #c0a375;
 }
 #pricing-table2-1v .mbr-section__container .mbr-section-subtitle SPAN {
   font-family: 'Bitter', serif;
